--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
                         <input type="text" name="name">
                         <label for="username">Username:</label>
                         <input type="text" name="username">
-                          <label for="password">If you do not possess a Security Key, please enter a Password:</label>
+                          <label for="password">If you do not possess a YubiKey 5, please enter a Password:</label>
                           <input type="text" name="password">
 
                         <input class="button-primary" type="submit" value="Register">
@@ -56,9 +56,9 @@
                     <h3>Login page</h3>
                     <form id="login">
                       <fieldset>
-                        <label for="username">username</label>
+                        <label for="username">Username</label>
                         <input type="text" name="username">
-                          <label for="password">If you do not possess a Security Key, please enter a Password:</label>
+                          <label for="password">If you do not possess a YubiKey 5, please enter a Password:</label>
                           <input type="text" name="password">
 
                         <input class="button-primary" type="submit" value="Login">
